--- a/index.css
+++ b/index.css
@@ -64,5 +64,73 @@ h1:hover {
     transition-duration: 1s;
     font-weight: bold;
     color: rgb(122, 78, 22);
+}
 
+.all_section {
+    background-color: black;
+}
+
+#jumbotron {
+   width: 700px;
+   height: 500px;
+   
+}
+
+#block_jumbotron {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 1400px;
+    margin: auto;
+}
+
+#block_slogan {
+    display: flex;
+    font-family: comforta ;
+    font-size: 15px;
+}
+
+h2 {
+    background-color: rgba(0, 0, 0, 0.136);
+    padding: 10px;
+    color: white;
+    font-family: comforta ;
+    text-align: center;
+    font-style: italic;
+    font-weight: lighter;
+}
+
+#spotify {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color: black;
+    padding: 30px 0px;
+}
+
+#music {
+    padding: 10px;
+    width: 500px;
+    height: 150px;
+}
+#music_ {
+    padding: 10px;
+    width: 500px;
+    height: 200px;
+}
+
+#menus {
+    display: flex;
+    max-width: 1400px;
+    margin: auto;
+    align-items: center;
+    justify-content: space-between;
+}
+
+h3{
+    font-family: comforta ;
+    font-weight: bolder;
+    padding: 10px;
+    margin: 40px 150px;
+    border: 3px black solid;
 }
