--- a/index.css
+++ b/index.css
@@ -18,6 +18,7 @@ header {
     background-color: black;
     padding: 10px;
     color: white;
+    border-bottom: 5px white solid ;
 }
 
 #block_content_header {
@@ -28,7 +29,7 @@ header {
     margin: auto;
 }
 
-#anchor_title {
+.anchor_title {
     text-decoration: none;
     color: white;
 }
@@ -39,7 +40,7 @@ h1 {
 
 h1:hover {
     cursor: pointer;
-    color:  rgb(122, 78, 22);
+    color: chocolate;
     transition-property: all;
     transition-timing-function: ease-in-out;
     transition-duration: 0.5s;
@@ -63,7 +64,11 @@ h1:hover {
     transition-timing-function: ease-in-out;
     transition-duration: 1s;
     font-weight: bold;
-    color: rgb(122, 78, 22);
+    color: chocolate;
+}
+
+main {
+    background-color: black;
 }
 
 .all_section {
@@ -73,7 +78,7 @@ h1:hover {
 #jumbotron {
    width: 700px;
    height: 500px;
-   
+   border-radius: 10px;
 }
 
 #block_jumbotron {
@@ -82,6 +87,7 @@ h1:hover {
     justify-content: space-between;
     max-width: 1400px;
     margin: auto;
+    padding: 30px 0px;
 }
 
 #block_slogan {
@@ -106,31 +112,184 @@ h2 {
     justify-content: space-evenly;
     background-color: black;
     padding: 30px 0px;
+    border-top: 5px white solid;
+    border-bottom: 5px white solid ;
+}
+
+#events_ {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color: black;
+    padding: 30px 0px;
+    border-top: 5px white solid;
+    border-bottom: 5px white solid ;
+    flex-direction: column;
+}
+
+#soiree {
+    width:900px;
+    height: 550px;
+}
+
+#tapis_rouge {
+    width: 900px;
+    margin-top: 20px;
 }
 
 #music {
     padding: 10px;
-    width: 500px;
-    height: 150px;
+    width: 400px;
+    height: 130px;
 }
 #music_ {
     padding: 10px;
     width: 500px;
-    height: 200px;
+    height: 400px;
+    border-radius: 20px;
 }
 
-#menus {
+.differents_menus {
+    text-align: center;
+    list-style-type: none;
+    font-family: comforta ;
+    font-size: 25px;
+    color: white;
+    padding: 20px;
+}
+
+.formules_content {
+    padding: 20px;
+    font-size: 25px;
+}
+
+.formules_content:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.formules {
     display: flex;
+    align-items: center;
+    padding: 20px;
+}
+
+
+.menus {
+    display: flex;
+    align-items: center;
+    background-color: black;
+    justify-content: center;
+}
+
+.designation{
+    font-family: comforta ;
+    border-radius: 4px;
+    font-weight: bolder;
+    padding: 10px 50px;
+    margin: 40px 150px;
+    border: 3px white solid;
+    color: white;
+    text-align: center;
+    font-size: 25px;
+}
+
+.price {
+    font-weight: bolder;
+
+}
+
+.image_menus {
+    width: 500px;
+    height: 500px;
+}
+
+.cartes_ {
+    border: 5px white solid;
+    margin: 30px 0px;
+}
+
+#sandwich_ {
+    width: 515px;
+    height: 415px;
+}
+
+#formulaire_commande {
+    background-color: black;
+    margin-top: 30px;
+}
+
+#commande {
+    background-color: black;
+    color: white;
+    font-family: comforta;
+    text-align: center;
+    font-size: 40px ;
+    font-weight: bolder;
+    padding-top: 15px;
+}
+
+#livraison {
+    margin: 15px 0px;
+}
+
+form {
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+    font-family: comforta;
     max-width: 1400px;
     margin: auto;
-    align-items: center;
-    justify-content: space-between;
+    border-radius: 10px;
+    border: 5px white solid;
 }
 
-h3{
+label {
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    
+}
+
+input {
+    width: 300px;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+#button {
+    width: 300px;
+    margin: 50px 0px;
     font-family: comforta ;
+    color: white;
     font-weight: bolder;
-    padding: 10px;
-    margin: 40px 150px;
-    border: 3px black solid;
+    background-color: chocolate;
+}
+
+#button:hover {
+    cursor: pointer;
+    background-color: rgb(135, 63, 12);
+}
+
+select {
+    width: 300px;
+    padding: 5px;
+}
+
+#ubereats {
+    padding: 30px;
+    border-radius: 50px;
+    width: 300px;
+    height: 300px;
+}
+
+.party {
+    color: white;
+    font-family: comforta;
+    text-align: center;
+    padding: 5px;
+    margin: 10px;
 }
